src/app/app.scss
// http://ionicframework.com/docs/v2/theming/


// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.
//
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.
//@import "../../node_modules/openlayers/css/ol";

@import "../theme/icons";
@import "../../node_modules/openlayers/css/ol";
@import "../theme/action-sheets.scss";

.validation-error-control {
  border-left: red 4px solid;
  border-bottom: red dotted thin;
}

.validation-error-text {
  font-size: smaller;
  color: red;
}

.action-list-button{
  background-color: transparent;
  float:right;
  font-size: 2.5rem;
  line-height: 3.8rem;
}

.invalid {
  border-bottom: 1px solid #ea6153;
}

.text-white {
  color: #fff;
}

.text-1x {
  font-size: 1em;
}

.text-menu {
  font-size: 1em;
  color: color($colors, dark);
}

.user-profile {
  padding-top: calc(20px + 4px);
  padding-top: calc(constant(safe-area-inset-top) + 4px);
  padding-top: calc(env(safe-area-inset-top) + 4px);

  .user-avatar {
    background-color: white;
    width: 55px;
    height: 55px;
    display: inline-block;
    border-radius: 20%;
    img {
      border-radius: 20%;
    }
  }
  .toolbar-background {
    background-image: linear-gradient(135deg, color($colors, dark), color($colors, caucaRed));
  }

  .other-data {
    .column {
      &:first-child {
        border-right: 1px solid rgba(36, 50, 157, .25);
      }
    }
  }
}

.menu-items {
  .item {
    &:last-child {
      border-bottom: 0;
    }
    .item-inner {
      border-color: rgba(86, 61, 124, .1);
    }
    .item-icon {
    }
  }

}

.page-header {
  .toolbar-background {
    background-color: color($colors, caucaRed);
  }
  .searchbar {
    background-color: gray;
  }
  .toolbar-title {
    color: whitesmoke;
  }
  .back-button {
    color: whitesmoke;
  }
  .bar-button {
    color: whitesmoke;
  }
}

.page-footer {
  .toolbar-background {
    background-color: color($colors, caucaRed);
  }
  .bar-button {
    color: whitesmoke;
  }
}

.list-items {
  .item:last-child {
    border: none;
  }
  .item-divider {
    background-color: #cbb677;
    color: black;
  }
  .item-inner {
    border-color: rgba(86, 61, 124, .1);
  }
  .list-header {
    background-color: #737373;
    color: whitesmoke;
    border-color: rgba(86, 61, 124, .1);
  }
}

.segment-themed {

  .segment-button {
    border-color: #cbb677;
    color: whitesmoke;
  }

  .segment-button.segment-activated{
    background-color: color($colors, caucaGold);
    color: black;
    border-color: color($colors, caucaGold);
  }
}

ion-navbar ion-icon{
  padding-left: 10px;
  font-size: 2em;
}

[col-3]
{padding:0px;}

.list-header-md{
  margin-bottom:0px;
  border-top:none;
}
.list-md{
  margin: 0px 0 16px;
}

.toolbar-ios ion-title{
  padding: 0 70px 1px;
}

//SELECT BOX WITH COLOR COLLECTION
.colorselect {
  .select-text {
    width: 75px;
    border-radius: 5px;
  }

  .alert-radio-inner,
  .alert-radio-icon,
  .alert-radio-label {
    display: none;
  }

  &.colorselected:before {
    content: '\2713';
    color: white;
    z-index: 999999;
    width: 100%;
    height: 100%;
    font-size: 33px;
    left: 50%;
    top: 50%;
    position: relative;
    transform: translate(-50%);
  }

  $colorsToSelect: "#000000" "#FFFFFF" "#6495ED" "#9ACD32" "#FFA500" "#FF0000" "#FFFF00" "#CB42F4";

  @each $colorOption in $colorsToSelect {
    $colorWithoutHash: str-slice($colorOption, 2, 7);

    &.color_#{$colorWithoutHash} {
      &, & .select-text {
        color: #{$colorOption};
        background-color: #{$colorOption};
      }
    }
  }
}

